# poetry-issue-6895

./: README.md
lib_a/: pyproject.toml
lib_b/: pyproject.toml
lib_c/: pyproject.toml
